codestatebackend/codestatebkend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: codestatebackend
    service: backend
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: codestatebackend

apiVersion: v1
kind: ServiceAccount
metadata:
  name: backend-codestatebackend
  labels:
    account: codestatebackend

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: "true"
  labels:
    app: codestatebackend
    tier: backend
  name: backendapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codestatebackend
      tier: backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: codestatebackend
        tier: backend
    spec:
      containers:
      - image: docker.io/itsaurabh/codestatebkend:v1
        imagePullPolicy: IfNotPresent
        name: dataapi
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
