codestatebackend/codestatebkend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: codestatebackend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: codestatebackend
spec:
  hosts:
  - "*"
  gateways:
  - codestatebackend-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /readDataForCode
    - uri:
        prefix: /readDataForState
    route:
    - destination:
        host: codestatebackend
        port:
          number: 8080
